--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     },
     "engine": "node >= 0.10.21",
     "dependencies": {
-        "when": "2.6.0",
-        "swig": "1.2.2",
+        "compression": "^1.7.3",
+        "express": "4.16.4",
         "mkdirp": "0.3.5",
-        "express": "3.4.4"
+        "swig": "1.2.2",
+        "when": "2.6.0"
     },
     "devDependencies": {
         "grunt": "~0.4.1",
