--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
     "dependencies": {
         "compression": "^1.7.3",
         "express": "4.16.4",
-        "mkdirp": "0.3.5",
-        "swig": "1.2.2",
-        "when": "2.6.0"
+        "mkdirp": "0.5.1",
+        "swig": "1.4.2",
+        "when": "3.7.8"
     },
     "devDependencies": {
-        "grunt": "~0.4.1",
-        "grunt-contrib-jshint": "~0.7.1"
+        "grunt": "1.0.3",
+        "grunt-contrib-jshint": "2.0.0"
     }
 }
