--- a/package.json
+++ b/package.json
@@ -21,6 +21,12 @@
         "when": "3.7.8"
     },
     "devDependencies": {
+        "@types/backbone": "^1.3.43",
+        "@types/d3": "^3.5.41",
+        "@types/d3-geo": "^1.10.3",
+        "@types/topojson": "^3.2.1",
+        "@types/underscore": "^1.8.9",
+        "@types/when": "^2.4.33",
         "grunt": "1.0.3",
         "grunt-contrib-jshint": "2.0.0"
     }
