--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -13,8 +13,7 @@
             2
         ],
         "linebreak-style": [
-            "error",
-            "unix"
+            "error"
         ],
         "quotes": [
             "error",
