--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "appService.defaultWebAppToDeploy": "/subscriptions/d4873088-017e-4d4e-81a4-ded292870bcb/resourceGroups/etshack/providers/Microsoft.Web/sites/rocketearth",
-    "appService.deploySubpath": "public"
+    "appService.deploySubpath": "public",
+    "eslint.enable": false
 }
